# moneymaker

./: .env.example  .env.txt  .gitignore  CLAUDE.md  DATA_ARCHITECTURE.md  DATA_FOUNDATION_PLAN.md  ENTITY_MATCHING.md  PHASE_D_IMPLEMENTATION_PLAN.md  PHASE_D_PROVIDER_DECISIONS.md  POINT_IN_TIME_DATA.md  READ_ONLY_ARCHITECTURE.md  docker-compose.streaming.yml  pyproject.toml  pytest.ini
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml
backtest/: __init__.py  backtester.py  book_timeline.py  data_quality.py  events.py  fill_model.py  latency_model.py  metrics.py
backtest/tests/: test_backtest.py
evaluation/: __init__.py  decision.py  evaluator.py  latency_trace.py  portfolio.py  pricing.py
evaluation/tests/: test_evaluation.py
gateway/: PHASES.md  __init__.py  arming.py  benchmark.py  client_ids.py  config.py  gateway.py  limits.py  orders.py  quarantine.py  token_budget.py  transport.py
gateway/tests/: test_gateway.py
graphify-out/: .graphify_health.json  .graphify_labels.json  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/2026-07-23/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: last_query_stamp  stat-index.json
intel/: __init__.py  base.py  confidence.py  history.py  material_change.py  player_matching.py
intel/adapters/: __init__.py  base_adapter.py  lineup_adapter.py  mlb_probable_pitcher_adapter.py  nba_injury_adapter.py  social_news_adapter.py  team_announcement_adapter.py
intel/tests/: test_intel.py
probability/: __init__.py  calibration.py  datasets.py  features.py  inference.py  onnx_export.py  pipeline.py  pregame_prior.py  reference.py  requirements.txt  residual_model.py  surfaces.py  uncertainty.py
probability/tests/: conftest.py  test_probability.py
sports_quant/: __init__.py  __main__.py  cli.py  config.py  http_policy.py  redaction.py
sports_quant/db/: __init__.py  engine.py  ids.py  init.py  models.py  normalize.py  schema.py
sports_quant/db/migrations/: a001_core_entities.sql  a002_games.sql  a003_integrity_guards.sql  b004_raw_responses.sql  b005_sportsbook.sql  b006_sportsbook_transition_dedup.sql  c007_kalshi.sql  c008_kalshi_metadata_integrity.sql  d009_provider_infra.sql  d010_provider_audit_integrity.sql  d011_official_games_stats.sql  d012_nba_specifics.sql  d013_nba_typed_repairs.sql
sports_quant/db/repositories/: __init__.py  base.py  capabilities.py  data_quality.py  game_statistics.py  games.py  ingestion_runs.py  kalshi.py  leagues.py  lineups.py  matching.py  nba.py  observations.py  official_games.py  players.py  probables.py  raw_responses.py  references.py  rosters.py  sportsbook.py  teams.py  venues.py
sports_quant/db/seeds/: __init__.py  loader.py  mlb_teams.py  nba_teams.py
sports_quant/db/tests/: conftest.py  test_d010_integrity.py  test_d011_official.py  test_db_init_cli.py  test_engine.py  test_ids.py  test_integrity_guards.py  test_isolation.py  test_kalshi_repositories.py  test_kalshi_schema.py  test_migrations.py  test_normalize.py  test_phase_d1_infra.py  test_price_snapshot_schema.py  test_repositories.py  (+4 more)
sports_quant/ingest/: __init__.py  hoopr_import.py  kalshi_ingestor.py  mlb_ingestor.py  nba_ingestor.py  odds_ingestor.py  provider_audit.py  runner.py  venues_ingestor.py
sports_quant/providers/: __init__.py  balldontlie.py  base_provider.py  cache.py  capabilities.py  kalshi.py  mlb_statsapi.py  mlb_status.py  nws.py  odds_api.py  open_meteo.py  raw_exchange.py
sports_quant/tests/: test_cli.py  test_config.py  test_http_policy.py  test_ingest_cli.py  test_kalshi.py  test_kalshi_ingest_cli.py  test_odds_api.py  test_phase_d1_integrity.py  test_phase_d2_cli.py  test_phase_d_cli.py  test_phase_d_isolation.py  test_phase_d_providers.py  test_quarantine.py
state/: __init__.py  base.py  benchmark.py  mlb.py  nba.py  orderbook.py  store.py
state/tests/: conftest.py  test_state.py
streaming/: __init__.py  correction_handler.py  deduplicator.py  event_bus.py  event_envelope.py  latency.py  nats_bus.py  replay.py  requirements.txt  sequence_tracker.py
streaming/tests/: test_streaming.py
tracking/: README.md  __init__.py  aggregations.py  base.py  mlb_hawkeye_adapter.py  mlb_statcast_adapter.py  nba_event_coordinates.py  nba_optical_adapter.py
tracking/tests/: test_tracking.py
(+14 files in other folders)
